2012-02-19  Charlie Zender  <zender@uci.edu>

	* Implement MD5 algorithm on all ncrcat record writes, and on ncks non-hyperslab writes

	* Add MD5 test variables to in.nc

	* Incorporate MD5 digest code by L. Peter Deutsch (LPD)
	Code is under separate BSD-like license. Compiles though not used yet.

	* Add nco_md5.[ch] for MD5 digests

2012-02-14  Charlie Zender  <zender@uci.edu>

	* Tested 4.0.9 on bluefire to find, of course, massive breakage

	* NCO 4.1.0 release procedure:
 	Changes since nco-4_0_9:
	cd ~/nco;cvs tag -d nco-4_1_0;cvs tag -d nco-4_1_0-1
	cd ~/nco;cvs commit -m "Preparing nco-4.1.0 release"
	cvs tag -c nco-4_1_0;cvs tag -c nco-4_1_0-1

	* Update AIX options to netCDF 4.1.3 on bluefire

2012-02-13  Charlie Zender  <zender@uci.edu>

	* NCO 4.0.9 release procedure:
 	Changes since nco-4_0_8: array(), revert NO_FILL, rounding
	cd ~/nco;cvs tag -d nco-4_0_9;cvs tag -d nco-4_0_9-1
	cd ~/nco;cvs commit -m "Preparing nco-4.0.9 release"
	cvs tag -c nco-4_0_9;cvs tag -c nco-4_0_9-1

	* Put #ifdef HAVE_CONFIG_H clauses in nco_mmr.h,nco_var_lst.h,nco_lst_utl.h

	* Linux GCC 4.6 regex.h also now, like Mac OS X, depends on sys/types.h

	* Clean-up set-but-unused variables for GCC 4.6

	* Document improved ncap2 array() function

2012-02-08  Charlie Zender  <zender@uci.edu>

	* Document ncap2 array() function

	* Clean-up prs_cls.cc

2012-02-06  Charlie Zender  <zender@uci.edu>

	* Build with netCDF 4.2 snapshots.
	No more regressions than with 4.1.3 so 4.2 is new default.

2011-12-31  Charlie Zender  <zender@uci.edu>

	* Update NCO homepage to announce ACCESS and deprecate SDO

2011-12-24  Charlie Zender  <zender@uci.edu>

	* Change copyright year to 2012

2011-12-23  Charlie Zender  <zender@uci.edu>

	* Warn when number of attributes exceeds NC_MAX_ATTRS

	* Learned NASA will fund ACCESS proposal!

2011-12-10  Charlie Zender  <zender@uci.edu>

	* Print helpful hint with NC_EVARSIZE errors

2011-12-07  Charlie Zender  <zender@uci.edu>

	* Tidy nco_cln_utl.c
