@@ -1,4 +1,4 @@
-/* $Header: /data/zender/nco_20150216/nco/src/nco/nco_msa.c,v 1.87 2012-01-01 20:51:53 zender Exp $ */
+/* $Header: /data/zender/nco_20150216/nco/src/nco/nco_msa.c,v 1.88 2012-02-20 04:42:06 zender Exp $ */
 
 /* Purpose: Multi-slabbing algorithm */
 
@@ -616,6 +616,7 @@ nco_cpy_var_val_mlt_lmt /* [fnc] Copy variable data from input to output file */
 (const int in_id, /* I [id] netCDF input file ID */
  const int out_id, /* I [id] netCDF output file ID */
  FILE * const fp_bnr, /* I [fl] Unformatted binary output file handle */
+ const nco_bool MD5_DIGEST, /* I [flg] Perform MD5 digests */
  const nco_bool NCO_BNR_WRT, /* I [flg] Write binary file */
  char *var_nm, /* I [sng] Variable name */
  lmt_all_sct * const * lmt_lst, /* I multi-hyperslab limits */
@@ -675,6 +676,8 @@ nco_cpy_var_val_mlt_lmt /* [fnc] Copy variable data from input to output file */
     { /* begin OpenMP critical */
       (void)nco_put_var1(out_id,var_out_id,0L,void_ptr,var_type);
     } /* end OpenMP critical */
+    /* Perform MD5 digest of input and output data if requested */
+    if(MD5_DIGEST) (void)nco_md5_chk(out_id,var_nm,var_sz*nco_typ_lng(var_type),void_ptr);
     if(NCO_BNR_WRT) nco_bnr_wrt(fp_bnr,var_nm,var_sz,var_type,void_ptr);
     (void)nco_free(void_ptr);
     return;
@@ -721,7 +724,9 @@ nco_cpy_var_val_mlt_lmt /* [fnc] Copy variable data from input to output file */
   { /* begin OpenMP critical */
     (void)nco_put_vara(out_id,var_out_id,dmn_map_srt,dmn_map_out,void_ptr,var_type);
   } /* end OpenMP critical */
-  
+
+  /* Perform MD5 digest of input and output data if requested */
+  if(MD5_DIGEST) (void)nco_md5_chk(out_id,var_nm,var_sz*nco_typ_lng(var_type),void_ptr);
   if(NCO_BNR_WRT) nco_bnr_wrt(fp_bnr,var_nm,var_sz,var_type,void_ptr);
   
   (void)nco_free(void_ptr);
